--- a/customcleanbnb/01/index.mjml
+++ b/customcleanbnb/01/index.mjml
@@ -154,7 +154,7 @@
           line-height="1.4"
         >
           <a
-            href="https://customcleanbnb.com"
+            href="tel:346-274-1861"
             style="color: #ffffff; font-weight: 600; text-decoration: none"
           >
             Call us here now
