--- a/customcleanbnb/01/index.mjml
+++ b/customcleanbnb/01/index.mjml
@@ -136,7 +136,7 @@
           letter-spacing="1px"
           line-height="1.4"
         >
-          Try us to see if we fit with our janitorial and commercial cleaning .
+          Try us to see if we fit with our janitorial and commercial cleaning
           <span
             href="https://customcleanbnb.com"
             style="color: #ffffff; font-weight: 600; text-decoration: none"
