--- a/customcleanbnb/01/index.mjml
+++ b/customcleanbnb/01/index.mjml
@@ -8,7 +8,7 @@
   </mj-head>
   <mj-body>
     <!-- Logo Section -->
-    <mj-section background-color="#52525B">
+    <mj-section background-color="#27272A">
       <mj-column>
         <mj-image
           alt="A Deeply Satisfying Clean Your Business Deserves"
