--- a/customcleanbnb/02/index.mjml
+++ b/customcleanbnb/02/index.mjml
@@ -42,7 +42,7 @@
       <mj-column>
         <mj-image
           padding="0"
-          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/customcleanbnb/assets/cleaning.jpg"
+          src="https://images.pexels.com/photos/3871607/pexels-photo-3871607.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
           alt=""
         />
       </mj-column>
