--- a/digypet/01/index.mjml
+++ b/digypet/01/index.mjml
@@ -5,7 +5,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
   /></mj-head>
   <mj-body>
-    <mj-section background-color="#F9FAFB">
+    <mj-section background-url="#F9FAFB">
       <mj-column>
         <mj-image
           alt=""
@@ -14,10 +14,12 @@
         />
       </mj-column>
     </mj-section>
-    <mj-section>
+
+    <!-- Popular Categories -->
+    <mj-section padding="0">
       <mj-column>
         <mj-image
-          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/popular-categories.png"
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/popular-categories.jpg"
           alt=""
           padding="0"
         />
