--- a/digypet/01/index.mjml
+++ b/digypet/01/index.mjml
@@ -5,7 +5,9 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
   /></mj-head>
   <mj-body>
-    <mj-section background-url="#F9FAFB">
+    <mj-section
+      background-url="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/universal/white.png"
+    >
       <mj-column>
         <mj-image
           alt=""
@@ -27,10 +29,10 @@
     </mj-section>
 
     <!-- Message -->
-    <mj-section background-color="#F9FAFB">
+    <mj-section background-color="#27272A">
       <mj-column>
         <mj-text
-          color="#27272A"
+          color="#F9FAFB"
           font-family="Poppins, sans-serif"
           font-size="14px"
           font-weight="500"
@@ -44,7 +46,7 @@
         </mj-text>
 
         <mj-text
-          color="#27272A"
+          color="#F9FAFB"
           font-family="Poppins, sans-serif"
           font-size="14px"
           font-weight="400"
