--- a/digypet/01/index.mjml
+++ b/digypet/01/index.mjml
@@ -55,6 +55,7 @@
         />
 
         <mj-text
+          align="center"
           color="#F9FAFB"
           font-family="Poppins, sans-serif"
           font-size="14px"
@@ -71,6 +72,7 @@
         />
 
         <mj-text
+          align="center"
           color="#F9FAFB"
           font-family="Poppins, sans-serif"
           font-size="14px"
@@ -88,6 +90,7 @@
         />
 
         <mj-text
+          align="center"
           color="#F9FAFB"
           font-family="Poppins, sans-serif"
           font-size="14px"
@@ -106,6 +109,7 @@
         />
 
         <mj-text
+          align="center"
           color="#F9FAFB"
           font-family="Poppins, sans-serif"
           font-size="14px"
@@ -123,6 +127,7 @@
         />
 
         <mj-text
+          align="center"
           color="#F9FAFB"
           font-family="Poppins, sans-serif"
           font-size="14px"
