--- a/digypet/01/index.mjml
+++ b/digypet/01/index.mjml
@@ -38,7 +38,7 @@
           color="#F9FAFB"
           font-family="Poppins, sans-serif"
           font-size="15px"
-          font-weight="500"
+          font-weight="600"
           letter-spacing="0.2px"
           line-height="1.4"
         >
@@ -142,14 +142,26 @@
       </mj-column>
     </mj-section>
 
+    <!-- divider -->
+    <mj-section background-color="#F9FAFB" padding="0">
+      <mj-column>
+        <mj-image
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/divider-01.png"
+          alt=""
+          padding="0"
+        />
+      </mj-column>
+    </mj-section>
+
     <!-- How To Build The Best Service Listing -->
-    <!-- <mj-section background-color="#2563EB">
+    <mj-section background-color="#F9FAFB">
       <mj-column>
         <mj-text
-          color="#F9FAFB"
+          align="center"
+          color="#27272A"
           font-family="Poppins, sans-serif"
-          font-size="16px"
-          font-weight="500"
+          font-size="15px"
+          font-weight="600"
           letter-spacing="0.2px"
           line-height="1.4"
         >
@@ -157,7 +169,7 @@
         </mj-text>
 
         <mj-text
-          color="#F9FAFB"
+          color="#27272A"
           font-family="Poppins, sans-serif"
           font-size="14px"
           font-weight="400"
@@ -174,6 +186,6 @@
           to increased booking.
         </mj-text>
       </mj-column>
-    </mj-section> -->
+    </mj-section>
   </mj-body>
 </mjml>
