--- a/digypet/01/index.mjml
+++ b/digypet/01/index.mjml
@@ -310,5 +310,58 @@
         </mj-text>
       </mj-column>
     </mj-section>
+
+    <!-- divider 02 -->
+    <mj-section background-color="#F9FAFB" padding="0">
+      <mj-column>
+        <mj-image
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/divider-02.png"
+          alt=""
+          padding="0"
+        />
+      </mj-column>
+    </mj-section>
+
+    <!-- Our Partners -->
+    <mj-section background-color="#0EA5E9">
+      <mj-column>
+        <mj-text
+          align="center"
+          color="#F9FAFB"
+          font-family="Poppins, sans-serif"
+          font-size="18px"
+          font-weight="600"
+          letter-spacing="0.2px"
+          line-height="1.4"
+        >
+          Our Partners
+        </mj-text>
+
+        <mj-image
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/section-02.png"
+          alt=""
+          padding="24px"
+        />
+
+        <mj-text
+          color="#F9FAFB"
+          font-family="Poppins, sans-serif"
+          font-size="14px"
+          font-weight="400"
+          letter-spacing="0.2px"
+          line-height="1.4"
+        >
+          Do you already have reviews on Facebook or Rover? Get a head! Start by
+          importing your existing reviews today from your Facebook and Rover
+          accounts. Reviews are one of the biggest things pet parents look for
+          when deciding which service provider they want to hire.
+          <br /><br />
+          To import reviews simply click on your profile dropdown and click on
+          your profile tab. Once you are on your profile page, you will see a
+          tab called "Reviews", and on this page, you can easily import your
+          existing reviews from Facebook and Rover.
+        </mj-text>
+      </mj-column>
+    </mj-section>
   </mj-body>
 </mjml>
