--- a/digypet/01/index.mjml
+++ b/digypet/01/index.mjml
@@ -13,7 +13,7 @@
         <mj-image
           alt=""
           href="https://www.digypet.com/"
-          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/logo.svg"
+          src="https://raw.githubusercontent.com/nrjdalal/emaildemo/master/digypet/assets/logo.png"
           width="156px"
         />
       </mj-column>
