--- a/digypet/01/index.mjml
+++ b/digypet/01/index.mjml
@@ -35,6 +35,7 @@
     <mj-section background-color="#0EA5E9">
       <mj-column>
         <mj-text
+          align="center"
           color="#F9FAFB"
           font-family="Poppins, sans-serif"
           font-size="16px"
