--- a/digypet/01/index.mjml
+++ b/digypet/01/index.mjml
@@ -45,8 +45,8 @@
         >
           Hi there, my name is Mason. I noticed that you signed up with us at
           Digypet but haven’t complete your profile section or created a pet
-          service listing yet.<br /><br />&nbsp;&nbsp;&nbsp;&nbsp;Don’t worry I
-          am here to help! When completing your profile page be sure to -
+          service listing yet.<br /><br />Don’t worry I am here to help! When
+          completing your profile page be sure to -
         </mj-text>
 
         <mj-image
