--- a/digypet/01/index.mjml
+++ b/digypet/01/index.mjml
@@ -211,7 +211,7 @@
       <mj-column>
         <mj-text
           align="center"
-          color="#F9FAFB"
+          color="#FDE047"
           font-family="Poppins, sans-serif"
           font-size="18px"
           font-weight="600"
