--- a/digypet/01/index.mjml
+++ b/digypet/01/index.mjml
@@ -43,10 +43,9 @@
           letter-spacing="0.2px"
           line-height="1.4"
         >
-          Hi there, my name is Mason. I noticed that you signed up with us at
-          Digypet but haven’t complete your profile section or created a pet
-          service listing yet.<br /><br />Don’t worry I am here to help! When
-          completing your profile page be sure to -
+          Hi there, my name is Mason. I noticed you might need a little help
+          setting up your profile. Don’t worry I am here to help!
+          <br /><br />When completing your profile page be sure to -
         </mj-text>
 
         <mj-image
@@ -118,8 +117,8 @@
           letter-spacing="0.2px"
           line-height="1.4"
         >
-          You work when you want and how you want by setting your own prices and
-          availability.
+          You work when you want and how you want by only accepting the gigs
+          that you want.
         </mj-text>
 
         <mj-image
@@ -140,6 +139,13 @@
           your profile by importing existing reviews from Facebook and Rover.
           Don’t forget you can also upload or create personal blogs.
         </mj-text>
+
+        <mj-button
+          background-color="#DC2626"
+          padding-top="36px"
+          padding-bottom="24px"
+          >Complete Your Profile</mj-button
+        >
       </mj-column>
     </mj-section>
 
@@ -176,6 +182,7 @@
         />
 
         <mj-text
+          align="center"
           color="#27272A"
           font-family="Poppins, sans-serif"
           font-size="14px"
@@ -228,6 +235,7 @@
         />
 
         <mj-text
+          align="center"
           color="#F9FAFB"
           font-family="Poppins, sans-serif"
           font-size="14px"
@@ -275,6 +283,7 @@
         </mj-text>
 
         <mj-text
+          align="center"
           color="#27272A"
           font-family="Poppins, sans-serif"
           font-size="14px"
@@ -298,6 +307,7 @@
         />
 
         <mj-text
+          align="center"
           color="#27272A"
           font-family="Poppins, sans-serif"
           font-size="14px"
@@ -346,6 +356,7 @@
         />
 
         <mj-text
+          align="center"
           color="#F9FAFB"
           font-family="Poppins, sans-serif"
           font-size="14px"
