--- a/digypet/01/index.mjml
+++ b/digypet/01/index.mjml
@@ -44,8 +44,8 @@
           line-height="1.4"
         >
           Hi there, my name is Mason. I noticed you might need a little help
-          setting up your profile. Don’t worry I am here to help!
-          <br /><br />When completing your profile page be sure to -
+          setting up your profile. Don’t worry I am here to help! When
+          completing your profile page be sure to -
         </mj-text>
 
         <mj-image
