--- a/digypet/01/index.mjml
+++ b/digypet/01/index.mjml
@@ -45,7 +45,7 @@
         >
           Hi there, my name is Mason. I noticed you might need a little help
           setting up your profile. Don’t worry I am here to help! Here are some
-          tips to help you get started -
+          tips to help you get started!
         </mj-text>
 
         <mj-image
